--- a/app/src/main/res/layout/album_detail_item.xml
+++ b/app/src/main/res/layout/album_detail_item.xml
@@ -13,7 +13,7 @@
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:background="#A9DDFF"
+            android:background="@color/secondary"
             android:elevation="0dp"
             android:padding="0dp"
             android:radius="0dp">
@@ -27,13 +27,13 @@
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
-                app:strokeColor="#A9DDFF"
+                app:strokeColor="@color/secondary"
                 app:strokeWidth="0dp">
 
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:background="#A9DDFF"
+                    android:background="@color/secondary"
                     android:orientation="vertical"
                     android:padding="8dp">
 
