--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -7,7 +7,7 @@
     <fragment
         android:id="@+id/page_inicio"
         android:name="com.example.vinilosapp.view.InicioFragment"
-        android:label="Inicio"
+        android:label="@string/title_home"
         tools:layout="@layout/fragment_inicio" >
     </fragment>
     <fragment
