--- a/app/src/main/res/menu/menu_bottom.xml
+++ b/app/src/main/res/menu/menu_bottom.xml
@@ -9,6 +9,6 @@
     <item
         android:id="@+id/albumsPageBtn"
         android:icon="@drawable/icon_albumes"
-        android:title="Álbumes"/>
+        android:title="@string/title_albums"/>
 
 </menu>
