--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -3,21 +3,12 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/nav_graph"
-    app:startDestination="@id/artistDetailFragment">
+    app:startDestination="@id/artistFragment">
     <fragment
         android:id="@+id/page_inicio"
         android:name="com.example.vinilosapp.view.InicioFragment"
         android:label="@string/title_home"
         tools:layout="@layout/fragment_inicio" >
-    </fragment>
-    <fragment
-        android:id="@+id/artistDetailFragment"
-        android:name="com.example.vinilosapp.view.ArtistDetailFragment"
-        android:label="@string/title_home"
-        tools:layout="@layout/artist_detail_fragment" >
-        <action
-            android:id="@+id/action_albumFragment_to_albumDetailFragment"
-            app:destination="@id/albumDetailFragment" />
     </fragment>
     <fragment
         android:id="@+id/albumFragment"
@@ -47,6 +38,21 @@
         android:name="com.example.vinilosapp.view.ArtistFragment"
         android:label="@string/title_artists"
         tools:layout="@layout/artist_fragment" >
+        <action
+            android:id="@+id/action_artistFragment_to_artistDetailFragment"
+            app:destination="@id/artistDetailFragment" />
+    </fragment>
+    <fragment
+        android:id="@+id/artistDetailFragment"
+        android:name="com.example.vinilosapp.view.ArtistDetailFragment"
+        android:label="@string/title_home"
+        tools:layout="@layout/artist_detail_fragment" >
+        <action
+            android:id="@+id/action_albumFragment_to_albumDetailFragment"
+            app:destination="@id/albumDetailFragment" />
+        <argument
+            android:name="artistId"
+            app:argType="integer" />
     </fragment>
     <fragment
         android:id="@+id/commentFragment"
