--- a/app/src/main/res/layout/album_item.xml
+++ b/app/src/main/res/layout/album_item.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout xmlns:android="http://schemas.android.com/apk/res/android"
+<layout xmlns:tools="http://schemas.android.com/tools"
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <data>
@@ -33,7 +34,8 @@
                 android:layout_height="match_parent"
                 android:orientation="vertical"
                 android:padding="8dp"
-                android:translationZ="@dimen/cardview_default_elevation">
+                android:translationZ="@dimen/cardview_default_elevation"
+                tools:ignore="UseCompoundDrawables">
 
                 <ImageView
                     android:id="@+id/headerImage"
@@ -43,7 +45,8 @@
                     android:src="@{album.cover}"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toTopOf="parent" />
+                    app:layout_constraintTop_toTopOf="parent"
+                    android:contentDescription="@string/cover_album" />
 
                 <TextView
                     android:id="@+id/albumName"
