--- a/app/src/main/res/layout/artist_detail_item.xml
+++ b/app/src/main/res/layout/artist_detail_item.xml
@@ -25,15 +25,9 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             app:strokeColor="@color/secondary"
-            app:strokeWidth="0dp">
-
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:background="@color/secondary"
-                android:orientation="vertical"
-                android:padding="8dp">
-
+            app:strokeWidth="0dp"
+            android:orientation="vertical"
+            android:padding="8dp">
                 <TextView
                     android:id="@+id/artistName"
                     android:layout_width="match_parent"
@@ -79,8 +73,6 @@
                         android:textColor="@color/black"
                         android:textSize="16sp" />
                 </LinearLayout>
-
-            </LinearLayout>
 
         </LinearLayout>
 
