--- a/app/src/main/res/layout/artist_item.xml
+++ b/app/src/main/res/layout/artist_item.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout xmlns:android="http://schemas.android.com/apk/res/android"
+<layout xmlns:tools="http://schemas.android.com/tools"
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <data>
@@ -31,19 +32,20 @@
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:orientation="vertical"
+                android:orientation="horizontal"
                 android:padding="8dp"
-                android:translationZ="@dimen/cardview_default_elevation">
+                android:translationZ="@dimen/cardview_default_elevation"
+                tools:ignore="UseCompoundDrawables">
 
                 <ImageView
                     android:id="@+id/headerImage"
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:adjustViewBounds="true"
+                    android:layout_width="120dp"
+                    android:layout_height="120dp"
                     android:src="@{artist.image}"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toTopOf="parent" />
+                    app:layout_constraintTop_toTopOf="parent"
+                    android:contentDescription="@string/artist_image" />
 
                 <TextView
                     android:id="@+id/artistName"
