--- a/app/src/main/res/layout/collector_item.xml
+++ b/app/src/main/res/layout/collector_item.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout xmlns:android="http://schemas.android.com/apk/res/android"
+<layout xmlns:tools="http://schemas.android.com/tools"
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <data>
@@ -15,7 +16,8 @@
         android:layout_marginBottom="8dp"
         android:elevation="8dp"
         android:orientation="horizontal"
-        android:radius="22dp">
+        android:radius="22dp"
+        tools:ignore="UseCompoundDrawables">
 
         <TextView
             android:id="@+id/tv_collector_name"
@@ -32,12 +34,12 @@
 
         <ImageView
             android:id="@+id/headerImage"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:adjustViewBounds="true"
+            android:layout_width="120dp"
+            android:layout_height="120dp"
             android:src="@drawable/collector"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+            app:layout_constraintTop_toTopOf="parent"
+            android:contentDescription="@string/collector_image" />
     </LinearLayout>
 </layout>
