--- a/app/src/main/res/layout/track_item.xml
+++ b/app/src/main/res/layout/track_item.xml
@@ -32,10 +32,20 @@
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:orientation="vertical"
+                android:orientation="horizontal"
                 android:padding="8dp"
                 android:translationZ="@dimen/cardview_default_elevation"
                 tools:ignore="UseCompoundDrawables">
+
+                <ImageView
+                android:id="@+id/headerImage"
+                android:layout_width="80dp"
+                android:layout_height="80dp"
+                android:src="@drawable/track"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
+                android:contentDescription="@string/track_image" />
 
                 <TextView
                     android:id="@+id/trackName"
