--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -8,7 +8,7 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
-    <color name="primary">#11A1FF</color>
+    <color name="primary">#006BD6</color>
     <color name="secondary">#A9DDFF</color>
     <color name="backgroundColorList">#F8F8F8</color>
 </resources>
