--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -32,6 +32,9 @@
         <action
             android:id="@+id/action_albumDetailFragment_to_albumFragment"
             app:destination="@id/albumFragment" />
+        <action
+            android:id="@+id/action_albumDetailFragment_to_trackAssociateFragment"
+            app:destination="@id/trackAssociateFragment" />
     </fragment>
     <fragment
         android:id="@+id/trackFragment"
@@ -52,6 +55,17 @@
         <action
             android:id="@+id/action_trackDetailFragment_to_trackFragment"
             app:destination="@id/trackFragment" />
+    </fragment>
+    <fragment
+        android:id="@+id/trackAssociateFragment"
+        android:name="com.example.vinilosapp.view.TrackAssociateFragment"
+        tools:layout="@layout/track_associate_fragment" >
+        <argument
+            android:name="albumId"
+            app:argType="integer" />
+        <action
+            android:id="@+id/action_trackAssociateFragment_to_albumFragment"
+            app:destination="@id/albumFragment" />
     </fragment>
     <fragment
         android:id="@+id/artistFragment"
